css/validate.css
body {
    padding-top: 50px;
    overflow: hidden;
    font-family: Arial, Helvetica, sans-serif;
}
#wrapper {
    min-height: 100%;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0px;
    left: 0;
    display: inline-block;
    margin-top: 50px;
}
#main-wrapper {
    height: 100%;
    overflow-y: auto;
    padding: 0px 0 120px 0;
}
#main {
    position: relative;
    height: 100%;
    overflow-y: auto;
    padding: 0 15px 0px;
}
#sidebar-wrapper {
    height: 100%;
    padding: 26px 0 0px 0;
    position: fixed;
    border-right: 1px solid gray;
}
#sidebar {
    position: relative;
    height: 100%;
    overflow:hidden;
}
#sidebar .list-group-item {
    border-radius: 0;
    border-left: 0;
    border-right: 0;
    border-top: 0;
}
@media (max-width: 500px) {
    body {
        padding-top: 0px;
    }
}
@media (min-width: 500px) {
    #main-wrapper {
        float:right;
    }
}
@media (max-width: 500px) {
    #main-wrapper {
        padding-top: 0px;
    }
}
@media (max-width: 500px) {
    #sidebar-wrapper {
        position: static;
        height:auto;
        max-height: 300px;
        border-right:0;
    }
}
.footer {
    background-color:#ffffff;
    bottom:0;
    position:fixed;
    padding:10px;
}

#appspider-logo {
    height: 30px;
}

.page-header {
    margin: 20px 0 20px;
    text-align: center;
}

textarea.attack-request-headers {
    height: 200px;
}
textarea.attack-request-payload {
    height: 75px;
    margin-top: 10px;
}
textarea.attack-response-headers {
    height: 200px;
}
textarea.attack-response-content {
    height: 300px;
    margin-top: 10px;
}
.select-view-lbl {
    text-align: center;
    vertical-align: middle;
    font-size: 10px;
    margin: 10px 0 0;
}
.protocol-lbl {
    text-align: center;
    vertical-align: middle;
    font-size: 10px;
    margin: 10px 0 0;
}
.btn-default {
    font-size: 12px;
}
.btn-group {
    margin-top: 10px;
}

label {
    margin-top: 5px;
}

button.dropdown-toggle.prettify {
    height: 34px;
}
div.header-pair {
    padding-top: 3px;
}
div.header-key {
    padding-right: 0;
}
label.header-key {
    padding-right: 0;
    height: 24px;
    font-size: 12px;
}
div.header-value {
    padding: 0 5px 0 ;
}
div.remove-header-btn {
     padding: 0 0 0;
 }

div.add-header-btn {
    padding: 0 0 0;
}
div.header-key input {
    height: 24px;
    font-size: 12px;
}
div.header-value input {
    height: 24px;
    font-size: 12px;
}
div.remove-header-btn a {
    height: 24px;
    font-size: 10px;
    text-align: center;
    text-decoration: none;
}

div.add-header-btn a {
    height: 24px;
    font-size: 10px;
    text-align: center;
    text-decoration: none;
}
div.header-spacing {
    padding: 0 0 10px 0;
}
div.container.header-pair {
    padding-left: 0;
    margin-left: 0;
    margin-right: 18px;
    width: 100%;
    padding-right: 15px;
}
textarea.attack-header-cookies {
    height: 100px;
}

